# yapg

./: Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
src/: charsets.rs  lib.rs  main.rs
